<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    android:background="@drawable/bg_modal_black">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_servicio"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_medium" />
        
    <TextView
        android:id="@+id/tv_precio_unitario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precio_unitario"
        android:textAlignment="center"
        android:textColor="@color/balance_blue"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginBottom="@dimen/margin_large" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        app:hintTextColor="@color/balance_blue"
        android:textColorHint="@color/balance_blue"
        app:boxStrokeColor="@color/balance_blue"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:backgroundTint="#33FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        layout="@layout/layout_tipos_bordado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium" />
        
    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_bordered_accent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded_blue" />

</LinearLayout>